--- a/public/final.html
+++ b/public/final.html
@@ -12,7 +12,7 @@
 <main>
  <div class="center-container">
 <h2>Final Score</h2>
-    <p class="score">50/50</p>
+    <p class="score" id="final-score">Loading...</p>
     <p>Thanks for playing!</p>
    <a href="index.html"><button id="next-button">Play Again</button></a>
 
@@ -20,5 +20,6 @@
     <footer>
         <a href="https://github.com/ao6gk4au4a83/startup">Github</a>
     </footer>
+    <script src="final.js"></script>   
 </body>
 </html>
