Add Service by updating

--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,11 @@
         </form>
     </section>
 
+    <h1>Random Quote Generator</h1>
+    <button onclick="displayQuote()">Get Random Quote</button>
+    <div id="quote"></div>
+    
+
 </body>
 <script src="index.js"></script>
 <footer>
