--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="index.css">
 <body>
     <header>
-        <h1>Flags Quiz</h1>
+        <h1>7 New World Wonders Quiz Quiz</h1>
     </header>
 
 
@@ -16,7 +16,7 @@
             <li><a href="signup.html">Sign Up</a></li>
         </ul>
     </nav>
-    <img alt="Flags" src="https://images.fineartamerica.com/images/artworkimages/mediumlarge/1/all-fifty-states-of-the-united-states-flags-art-design-turnpike.jpg" />
+    <img alt="Flags" src="https://transcode-v2.app.engoo.com/image/fetch/f_auto,c_lfill,w_300,dpr_3/https://assets.app.engoo.com/images/5Z2eP5Tfe0anTWCtliOV2v.jpeg" />
     <section id="about">
         <h2>Start the Game</h2>
         <form>
