--- a/public/playpage.html
+++ b/public/playpage.html
@@ -2,10 +2,10 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>Flags Quiz</title>
+        <title>New World Wonders Quiz Quiz</title>
         <link rel="stylesheet" type="text/css" href="playpage.css">
         <header>
-            <h1>Flags Quiz</h1>
+            <h1>New World Wonders Quiz Quiz</h1>
         </header>
         <nav>
           <ul>
