--- a/public/final.html
+++ b/public/final.html
@@ -3,13 +3,13 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Flags Quiz</title>
+    <title>New World Wonders Quiz Quiz</title>
     <link rel="stylesheet" type="text/css" href="final.css">
 </head>
 
 <body>
     <header>
-        <h1>Flags Quiz</h1>
+        <h1>New World Wonders Quiz Quiz</h1>
     </header>
     <main>
         <div class="center-container">
