--- a/public/signup.html
+++ b/public/signup.html
@@ -2,12 +2,12 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Flags Quiz</title>
+    <title>New World Wonders Quiz Quiz</title>
     <link rel="stylesheet" type="text/css" href="signup.css">
 </head>
 <body>
     <header>
-        <h1>Flags Quiz</h1>
+        <h1>New World Wonders Quiz Quiz</h1>
     </header>
 
     <main>
