--- a/public/signup.html
+++ b/public/signup.html
@@ -30,6 +30,7 @@
             </div>
         </section>
     </main>
+    <script src="signup.js"></script> 
     <footer>
         <a href="https://github.com/ao6gk4au4a83/startup-main">github</a>
     </footer>
